# target

./: .gitignore  .pre-commit-config.yaml  README.md  dictionary_keys.py  pyproject.toml  requirements.txt  run_eval.ipynb  run_eval.md  run_eval.py  setup.py
dataset_loaders/: AbsDatasetLoader.py  AbsTargetDatasetLoader.py  DatasetLoaderEnums.py  GenericDatasetLoader.py  HFDatasetLoader.py  LoadersDataModels.py  TargetDatasetConfig.py  Text2SQLDatasetLoader.py  __init__.py  loaders_datamodels.py  utils.py
demo/: demo_notebook.ipynb
evaluators/: TARGET.py  TargetEvaluator.py  utils.py
experiments/: downstream_evals.py  nih_retrieval_evals.py  retrieval_evals.py  run_eval.ipynb  run_eval.md  run_eval.py  run_murre.py  utils.py
experiments/dataset_metrics/: measure_dataset_size.ipynb
experiments/downstream/: downstream_evals.py  error_analysis.ipynb  fetaqa_downstream_eval.ipynb  no_context_downstream_eval.py  run_downstream_eval.ipynb  run_downstream_eval.md
experiments/downstream/llamaindex_retriever/: downstream_eval.ipynb  fetaqa_downstream_eval.ipynb
experiments/retrieval/: bm24_no_title_results_bird_val.ipynb  bm25_no_title_bird_val_in.ipynb  bm25_no_title_results_bird_val.ipynb  bm25_with_title_results_bird_val.ipynb  nih_retrieval_evals.py  retrieval_evals.py  run_bird_eval.ipynb  run_retrieval_evals.ipynb  run_retrieval_evals_no_result_presistence.ipynb  tfidf_no_title_bird_val_in.ipynb  tfidf_no_title_results_bird_val.ipynb  tfidf_with_title_results_bird_val.ipynb  utils.py
generators/: AbsGenerator.py  AbsTargetGenerator.py  DefaultGenerator.py  DefaultTargetGenerator.py  GeneratorPrompts.py  GeneratorSystemPrompts.py  GeneratorsDataModels.py  Text2SQLGenerator.py  __init__.py
research/notebooks/: pvg-extract-tables-from-sql.ipynb
retrievers/: AbsCustomEmbeddingRetriever.py  AbsRetrieverBase.py  AbsStandardEmbeddingRetriever.py  AbsStandardizedEmbeddingRetriever.py  AbsTargetCustomEmbeddingRetriever.py  AbsTargetCustomEmbeddingRetriver.py  AbsTargetDirectRetriever.py  AbsTargetRetrieverBase.py  AbsTargetRetrieverWithEmbedding.py  AbsTargetStandardizedEmbeddingRetriever.py  RetrieversDataModels.py  __init__.py  utils.py
retrievers/analysis/: NoContextRetriever.py
retrievers/hyse/: HySERetriever.py
retrievers/llama_index/: LlamaIndexRetriever.py  embedding_utils.py
retrievers/naive/: DefaultOpenAIEmbeddingRetriever.py  HNSWOpenAIEmbeddingRetriever.py  OpenAIEmbeddingRetriever.py  T5EmbeddingRetriever.py
retrievers/openai_emb/: oai_embedder.py
retrievers/ott-qa/: OTTQARetriever.py  utils.py
retrievers/ott-qa/ott-qa-test/: basic_table_embed_test.py
retrievers/ottqa/: .gitignore  OTTQARetriever.py  utils.py
retrievers/tests/: ottqa_basic_table_embed_test.py
target_benchmark/: __init__.py  dictionary_keys.py
target_benchmark/dataset_loaders/: AbsDatasetLoader.py  DatasetLoaderEnums.py  GenericDatasetLoader.py  HFDatasetLoader.py  LoadersDataModels.py  NeedleInHaystackDataLoader.py  TargetDatasetConfig.py  Text2SQLDatasetLoader.py  __init__.py  utils.py
target_benchmark/evaluators/: TARGET.py  __init__.py  target.py  utils.py
target_benchmark/generators/: AbsGenerator.py  DefaultGenerator.py  GeneratorPrompts.py  GeneratorsDataModels.py  Text2SQLGenerator.py  __init__.py
target_benchmark/retrievers/: AbsCustomEmbeddingRetriever.py  AbsRetrieverBase.py  AbsStandardEmbeddingRetriever.py  RetrieversDataModels.py  __init__.py  utils.py
target_benchmark/retrievers/analysis/: NoContextRetriever.py
target_benchmark/tasks/: AbsTask.py  FactVerificationTask.py  QuestionAnsweringTask.py  TableRetrievalTask.py  TasksDataModels.py  Text2SQLTask.py  __init__.py  utils.py
target_benchmark/tests/: dataloaders_test.py  dummy.py  end_to_end_test.py  evaluator_basic_test.py  fact_ver_task_basic_test.py  generators_basic_test.py  hnsw_openai_test.py  hyse_basic_test.py  llama_index_basic_test.py  nih_basic_test.py  ottqa_basic_table_embed_test.py  question_answering_task_basic_test.py  standard_retriever_basic_test.py  t2s_dataloaders_test.py  table_retrieval_task_basic_test.py  test_tasks.py  text2sql_task_basic_test.py
tasks/: AbsTargetTask.py  AbsTask.py  FactVerificationTask.py  QuestionAnsweringTask.py  TableRetrievalTask.py  TasksDataModels.py  Text2SQLTask.py  __init__.py  use_eval.py
tasks/utils/: __init__.py  exec_ves_eval.py  process_sql.py  spider_text2sql_evaluation.py  sql_exec_eval.py
tests/: dataloaders_test.py  dummy.py  end_to_end_test.py  evaluator_basic_test.py  fact_ver_task_basic_test.py  generators_basic_test.py  hyse_basic_test.py  llama_index_basic_test.py  nih_basic_test.py  ottqa_basic_table_embed_test.py  question_answering_task_basic_test.py  standard_retriever_basic_test.py  standardized_retriever_basic_test.py  t2s_dataloaders_test.py  table_retrieval_task_basic_test.py  text2sql_task_basic_test.py
tests/dataset_loaders/: dataloaders_test.py  text2sql_dataloaders_test.py
tests/evaluators/: evaluator_basic_test.py
tests/generators/: generators_basic_test.py
tests/retrievers/: hnsw_openai_test.py  hyse_basic_test.py  llama_index_basic_test.py  murre_retriever_test.py  ottqa_basic_table_embed_test.py  row_serializer_test.py  standard_retriever_basic_test.py
tests/tasks/: fact_ver_task_basic_test.py  nih_basic_test.py  question_answering_task_basic_test.py  table_retrieval_task_basic_test.py  task_resume_test.py  test_tasks.py  text2sql_task_basic_test.py
(+35 files in other folders)
