[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "target_benchmark"
version = "0.1.3"
description = "Table Retrieval for Generative Tasks Benchmark"
readme = "README.md"
license = "Apache-2.0"
authors = [
  "Xingyu Ji <jixy2012@berkeley.edu>",
  "Madelon Hulsebos <madelon@berkeley.edu>",
  "Parker Glenn <parkervg5@gmail.com>",
]
homepage = "https://target-benchmark.github.io/"
repository = "https://github.com/target-benchmark/target"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
packages = [
  { include = "target_benchmark" }
]
# Minimum interpreter
[tool.poetry.dependencies]
python = ">=3.9,<4.0"

# Core dependencies
datasets            = "^2.19.0"
evaluate            = "^0.4.2"
func-timeout        = "^4.3.5"
hnswlib             = "^0.8.0"
langchain           = "^0.1.16"
langchain-community = "^0.0.34"
langchain-core      = "^0.1.45"
langchain-openai    = "^0.0.8"
langchain-text-splitters = "^0.0.1"
numpy               = "^1.26.4"
pandas              = "^2.2.2"
pydantic            = "^2.7.4"
python-dateutil     = "^2.9.0"
python-dotenv       = "^1.0.1"
qdrant-client       = "^1.9.1"
regex               = "^2023.10.3"
rouge-score         = "^0.1.2"
sacrebleu           = "^2.4.2"
scikit-learn        = "^1.3.0"
scipy               = "^1.13.0"
transformers        = "^4.41.2"
tqdm                = "^4.65.0"

llama-index = { version = "^0.10.58", optional = true }
nltk        = { version = "^3.8.1", optional = true }
pexpect     = { version = "^4.9.0", optional = true }
spacy       = { version = "^3.7.4", optional = true }

[tool.poetry.extras]
llamaindex_retriever = ["llama-index"]
ottqa_retriever      = ["nltk", "pexpect", "spacy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
